# clickedu-python-client

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: clean_demo.py
src/clickedu/: __init__.py  client.py  config.py  exceptions.py
src/clickedu/auth/: __init__.py  auth_api.py  clickedu_api.py  flow.py
src/clickedu/models/: __init__.py  responses.py
src/clickedu/query/: __init__.py  query_api.py
src/clickedu/utils/: __init__.py  file_handler.py  logger.py
tests/: __init__.py  conftest.py
tests/test_auth/: test_auth_api.py  test_clickedu_api.py  test_flow.py
tests/test_integration/: test_full_flow.py
tests/test_models/: test_responses.py
tests/test_query/: test_query_api.py
